# Weaver

./: .dockerfile.swp  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  dockerfile  pyproject.toml  test_workflow.py  weaver.py
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml
.github/workflows/: alpaca-integration.yml  backend-ci.yml  compose-smoke.yml  e2e.yml  frontend-ci.yml
Prototype/: Main.py
backend/src/: __init__.py  weaver.py
docker/: .env.example  Dockerfile  Dockerfile2  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.prod.yml  docker-compose.yml  example.env  example.env.dev  init-env.sh  requirements.txt
docker(out-date)/: .env.example  Dockerfile  docker-compose.yml  requirements.txt
docker/backend/: Dockerfile  Dockerfile.dev  requirements.dev.txt  requirements.txt
docker/e2e/: Dockerfile
docker/frontend/: Dockerfile  Dockerfile.dev  nginx.conf
docs/: ARCHITECTURE.md  ARCHITECTURE_BASELINE.md  ARCHITECTURE_BASELINE_FULL.md  AUDIT_FINDINGS.md  CGNote  CI_TEST_AUDIT.md  DESIGN_AUDIT.md  DESIGN_REVIEW_PLAN.md  DEVELOPMENT.md  DOCS_INDEX.md  INDEPENDENT_DESIGN_REVIEW.md  M8_FINAL_PYRAMID_REVIEW.md  MILESTONE_PLAN.md  Notes.md  Notes_cn.md  Notes_en.md  PORTAINER_UI_RESEARCH.md  PRODUCTION_TEST_PLAN.md  PROD_TEST_REVIEW.md  README.md  TEST_COVERAGE.md  UI_AUDIT.md  alpaca_connector.md
docs/architecture/: api.md  clock.md  config.md  deployment.md  events.md  greta.md  marvin.md  roadmap.md  veda.md  walle.md
docs/archive/: ARCHITECTURE_BASELINE_FULL.md  roadmap-full-backup.md
docs/spec/: SPEC_BACKEND.md  SPEC_FLOWS.md  SPEC_FRONTEND.md  SYSTEM_SPEC.md
haro/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
haro/coverage/: coverage-final.json  index.html
haro/src/: App.tsx  index.css  main.tsx
haro/tests/: setup.ts  utils.tsx
scripts/ci/: backend-lint.sh  backend-test.sh  check-all.sh  check-local.sh  compose-smoke-local.sh  compose-smoke.sh  db-migrate.sh  e2e-local.sh  e2e.sh  frontend-lint.sh  frontend-test.sh
setup/: DevelopmentDepoly.sh  ReleaseDepoly.sh  dockerfile_dev
src/: __init__.py  __main__.py  config.py  constants.py  models.py
src/GLaDOS/: __init__.py  api_handler.py  controller.py  data_manager.py  error_handler.py  event_bus.py  event_handlers.py  events.py  glados.py  glados_core.py  strategy_loader.py  tasks.py  trading_engine.py
src/Greta/: __init__.py
src/Prototype/: Main.py
src/Veda/: __init__.py  alpaca_api_handler.py  api_handler.py  base_api_handler.py  data_uploader.py  veda.py
src/WallE/: __init__.py
src/api/: __init__.py
src/config/: __init__.py  celery_config.py
src/events/: __init__.py  log.py  offsets.py  protocol.py  registry.py  types.py
src/glados/: __init__.py  app.py  dependencies.py  event_bus.py  exceptions.py  glados.py  schemas.py  sse_broadcaster.py  task_utils.py
src/greta/: __init__.py  fill_simulator.py  greta_service.py  models.py
src/lib/: __init__.py  logger.py
src/marvin/: __init__.py  base_strategy.py  exceptions.py  sample_strategy.py  strategy_loader.py  strategy_meta.py  strategy_runner.py
src/veda/: __init__.py  adapter_loader.py  adapter_meta.py  alpaca_api_handler.py  exceptions.py  interfaces.py  models.py  order_manager.py  persistence.py  position_tracker.py  veda.py  veda_service.py
src/walle/: __init__.py  database.py  models.py
tests/: Notes.md  alpaca_helpers.py  conftest.py
tests/ci/: test_ci_pipeline.py
tests/e2e/: conftest.py  helpers.py  test_backtest_flow.py  test_navigation.py  test_orders.py  test_orders_lifecycle.py  test_paper_flow.py  test_sse.py
tests/factories/: __init__.py  events.py  orders.py  runs.py
tests/fixtures/: __init__.py  clock.py  database.py  event_log.py  http.py  strategies.py
tests/integration/: conftest.py  test_backtest_flow.py  test_bar_repository.py  (+4 more)
weaver/: __init__.py
(+311 files in other folders)
